Closed Bug 368259 Opened 18 years ago Closed 18 years ago

[FIX]###!!! ASSERTION: frame shouldn't be in reflow yet: '!(frame->GetStateBits() & NS_FRAME_IN_REFLOW)'

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: assertion)

Attachments

(1 file)

###!!! ASSERTION: frame shouldn't be in reflow yet: '!(frame->GetStateBits() & NS_FRAME_IN_REFLOW)', file /Users/admin/trunk/mozilla/layout/generic/nsHTMLReflowState.cpp, line 211

This happens multiple times when I start Firefox, and also when I load pretty much any page.  Even reloading data:text/html,Foo triggers it.

Not sure if this is coming from chrome or content.

This assertion was added in bug 367442.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #252866 - Flags: superreview?(dbaron)
Attachment #252866 - Flags: review?(dbaron)
OS: Mac OS X → All
Hardware: Macintosh → All
Summary: ###!!! ASSERTION: frame shouldn't be in reflow yet: '!(frame->GetStateBits() & NS_FRAME_IN_REFLOW)' → [FIX]###!!! ASSERTION: frame shouldn't be in reflow yet: '!(frame->GetStateBits() & NS_FRAME_IN_REFLOW)'
Target Milestone: --- → mozilla1.9alpha
Attachment #252866 - Flags: superreview?(dbaron)
Attachment #252866 - Flags: superreview+
Attachment #252866 - Flags: review?(dbaron)
Attachment #252866 - Flags: review+
Fixed.  No more assert.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: