Remove assert that happens to not be assertable.  Bug 368259, r+sr=dbaron